--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,15 @@ plugins {
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
-
 test {
 	useJUnitPlatform()
 }
